# viewer

./: .gitignore  CMakeLists.txt  README.md  viz.md
.github/workflows/: ci.yml  release.yml
adapters/: anim_pheno.py  anny_demo.cpp  osc_test_sender.py  regen_pheno_slang.sh  sinew_view.cpp  sinew_view.h  sinew_view_lean.c  sinew_view_stub.c  smoke.c  test_walk.json
core/: channel_map.c  channel_map.h
ports/: pose_sink.h  sibling-repos.txt  tracker_source.h  vr_source.h  vr_tracker_sink.h
spec/: ViewerDemo.lean  lake-manifest.json  lakefile.lean
spec/Sinew/: Viewer.lean
spec/tests/viewer/: run.sh
tests/: test_channel_map.cpp
